--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=JetBrains+Mono:wght@300;400;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -48,7 +48,7 @@
             <div class="content-split">
                 <div class="vision-main">
                     <h3>Stop doing manual work</h3>
-                    <p>I don't like wasting time. If I have to do a task more than twice, I build a robot to do it for
+                    <p>I don't like wasting time. If I have to do a task more than twice, I build a bot to do it for
                         me. My goal is to turn human effort into autonomous workflows.</p>
                 </div>
                 <div class="vision-side">
