--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <footer id="contact">
         <div class="container">
             <h2 class="section-title" data-value="CONTACT">CONTACT</h2>
-            <p>Need automation? Find me on Discord.</p>
+            <p>Extra Curious? Find me on Discord.</p>
             <p class="discord-tag">@flash_speed3412</p>
         </div>
     </footer>
@@ -104,4 +104,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
