--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
     </section>
 
     <section id="why-roblox" class="section">
-        <div class="container">
-            <h2 class="section-title" data-value="BUT.. WHY ROBLOX BOTS??">BUT.. WHY ROBLOX BOTS??</h2>
-            <div class="logic-text">
-                <p>The reason why I am talking about Roblox Bots is because it's interesting, manipulating applications into thinking you're playing as a human while you aren't at all, and can be ran overnight for perks In-game. Creating a Roblox Bot is simple! You need to add sensors for proceeding into the next part of the code such as detecting Players and Killing them in Shooter Games. It's a shot in the heart seeing rarely any Bots, External nor Exploited. There is many of course but none is being used nowadays except a Portion. Many bot source code live in Github such as Automating Fisch, Starving Artists, and a few more but none are as advanced and interesting.</p>
-            </div>
+    <div class="container">
+        <h2 class="section-title" data-value="BUT.. WHY ROBLOX BOTS??">BUT.. WHY ROBLOX BOTS??</h2>
+        <div class="logic-text">
+            <p>I build bots because manipulating an app into thinking a human is playing is the ultimate logic test. By adding "sensors" into the code to detect players or game events, I create systems that run overnight for perks while I sleep. Most public code on GitHub is basic and outdated; I focus on building advanced, external bots that actually work and stay undetectable.</p>
         </div>
-    </section>
+    </div>
+</section>
 
     <section id="roblox-projects" class="section">
         <div class="container">
@@ -269,3 +269,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
